tests/toylang/neg/000975_mutation.toylang
program a = { if a then program sleep; } .
